--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.2.0'
     implementation 'com.mysql:mysql-connector-j:8.2.0'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.0'
+
 
 
     runtimeOnly 'org.postgresql:postgresql'
