--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.liquibase:liquibase-gradle-plugin:1.1.0'
     implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'com.github.ozlerhakan:poiji:4.1.2'
+
 
     runtimeOnly 'org.postgresql:postgresql'
 
